[tool.poetry]
name = "proactiveagent"
version = "0.1.0"
description = "A LLM-based agent that proactively predict your instruction for easier usage"
authors = ["Yaxi Lu <luyaxi@live.com>", "Shenzhi Yang <summerfall1819@gmail.com>"]
readme = "README.md"
license = "Apache License 2.0"

[project]
name = "proactiveagent"
version = "0.1.0"
description = "A LLM-based agent that proactively predict your instruction for easier usage"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Yaxi Lu", email = "luyaxi@live.com"},
    {name = "Shenzhi Yang", email = "summerfall1819@gmail.com"}
]
dependencies = [
    "tqdm",
    "uuid",
    "fire",
    "guid",
    "docx",
    "pyPDF2",
    "pandas",
    "pynput",
    "psutil",
    "openai>=1.46.0",
    "pyyaml>=6.0.2",
    "gradio",
    "fastapi",
    "uvicorn",
    "tiktoken>=0.7.0",
    "tenacity>=9.0.0",
    "colorlog>=6.8.2",
    "watchdog",
    "aw-client>=0.5.13",
    "jsonlines>=4.0.0",
    "pyperclip>=1.9.0",
    "pywinauto; sys_platform=='win32'",
    "codelinker",
    "docstring_parser",
    "windows-toasts; sys_platform=='win32'",
    "macos_notifications; sys_platform=='darwin'",
]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "*"
uuid = "*"
fire = "*"
guid = "*"
docx = "*"
pyPDF2 = "*"
pandas = "*"
pynput = "^1.7.7"
psutil = "*"
openai = "^1.46.0"
pyyaml = "^6.0.2"
gradio = "*"
fastapi = "*"
uvicorn = "*"
tiktoken = "^0.7.0"
tenacity = "^9.0.0"
colorlog = "^6.8.2"
watchdog = "*"
aw-client = "^0.5.13"
jsonlines = "^4.0.0"
pyperclip = "^1.9.0"
pywinauto = {version = "*", markers = "sys_platform == 'win32'"}
codelinker = "*"
docstring_parser = "*"
windows-toasts = {version = "*", markers = "sys_platform == 'win32'"}
macos_notifications = {version = "*", markers = "sys_platform == 'darwin'"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
