[tool.poetry]
name = "agent"
version = "0.1.0"
description = "A LLM-based agent that proactively predict your instruction for easier usage"
readme = "README.md"
license = "Apache License 2.0"
packages = [{include = "agent"}]

[project]
name = "agent"
version = "0.1.0"
description = "A LLM-based agent that proactively predict your instruction for easier usage"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
dependencies = [
    "tqdm",
    "uuid",
    "fire",
    "guid",
    "docx",
    "pyPDF2",
    "pandas",
    "pynput",
    "psutil",
    "openai>=1.46.0",
    "pyyaml>=6.0.2",
    "gradio",
    "fastapi",
    "uvicorn",
    "tiktoken>=0.7.0",
    "tenacity>=9.0.0",
    "colorlog>=6.8.2",
    "watchdog",
    "jsonlines>=4.0.0",
    "pyperclip>=1.9.0",
    "codelinker",
    "docstring_parser",
    "httpx[socks]",
    "httptools>=0.4.0",
]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "*"
uuid = "*"
fire = "*"
guid = "*"
docx = "*"
pyPDF2 = "*"
pandas = "*"
pynput = "^1.7.7"
psutil = "*"
openai = "^1.46.0"
pyyaml = "^6.0.2"
gradio = "*"
fastapi = "*"
uvicorn = "*"
tiktoken = "^0.7.0"
tenacity = "^9.0.0"
colorlog = "^6.8.2"
watchdog = "*"
jsonlines = "^4.0.0"
pyperclip = "^1.9.0"
codelinker = "*"
docstring_parser = "*"
httpx = {version = "*", extras = ["socks"]}
httptools = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
